Crash when copying files
Affected version
- Nightly flatpak: Yes / No / Can't test it because
- Other:
Steps to reproduce
- Create a bunch of empty files (I was able to recreate with 600 files)
- In Nautilus select all files and copy
- In rapid fire, ctrl+v to paste multiple times (i.e. 5 times)
Current behavior
Crash
Expected behavior
Additional information
#0 0x00007ffff6d5ae3c in __pthread_kill_implementation () at /lib64/libc.so.6
#1 0x00007ffff6d0aa16 in raise () at /lib64/libc.so.6
#2 0x00007ffff6cf482f in abort () at /lib64/libc.so.6
#3 0x00007ffff7e86d18 in g_assertion_message_expr[cold] () at /lib64/libglib-2.0.so.0
#4 0x00007ffff7ee6bae in g_assertion_message_expr () at /lib64/libglib-2.0.so.0
#5 0x000000000044e579 in add_to_hash_table (directory=0x1363350, file=0x6005de0, node=0x5f58c80 = {...})
at ../src/nautilus-directory.c:876
#6 0x000000000044e797 in nautilus_directory_add_file (directory=0x1363350, file=0x6005de0)
at ../src/nautilus-directory.c:916
#7 0x0000000000468848 in nautilus_file_get_internal (location=0x179d000, create=1) at ../src/nautilus-file.c:797
#8 0x000000000046891c in nautilus_file_get (location=0x179d000) at ../src/nautilus-file.c:812
#9 0x00000000004599a7 in get_unique_target_file
(src=0x179d000, dest_dir=0x5ea2580, same_fs=1, dest_fs_type=0x0, count=214)
at ../src/nautilus-file-operations.c:4361
#10 0x000000000045bdd9 in copy_move_file
(copy_job=0x5d79950, src=0x179d000, dest_dir=0x5ea2580, same_fs=1, unique_names=1, dest_fs_type=0x7ffff19e39a8, souPython Exception <class 'gdb.error'>: There is no member named keys.
rce_info=0x7ffff19e3a70, transfer_info=0x7ffff19e3a40, debuting_files=0x5d8d4c0, overwrite=0, skipped_file=0x7ffff19e39b4, readonly_source_fs=0) at ../src/nautilus-file-operations.c:5654
#11 0x000000000045c738 in copy_files
(job=0x5d79950, dest_fs_id=0x7fffdc035ce0 "l39", source_info=0x7ffff19e3a70, transfer_info=0x7ffff19e3a40)
at ../src/nautilus-file-operations.c:5952
#12 0x000000000045cbd5 in nautilus_file_operations_copy
(task=0x5db10e0, source_object=0x0, task_data=0x5d79950, cancellable=0x56c3da0)
at ../src/nautilus-file-operations.c:6099
#13 0x00007ffff7365c43 in g_task_thread_pool_thread () at /lib64/libgio-2.0.so.0
#14 0x00007ffff7ee9d02 in g_thread_pool_thread_proxy.lto_priv () at /lib64/libglib-2.0.so.0
#15 0x00007ffff7ee7302 in g_thread_proxy () at /lib64/libglib-2.0.so.0
#16 0x00007ffff6d59017 in start_thread () at /lib64/libc.so.6
#17 0x00007ffff6dde6d0 in clone3 () at /lib64/libc.so.6
Edited by Corey Berla